<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ar_ui</name>
  <version>0.0.1</version>
  <description>RViz panel plugin for Behavior Tree editing and execution monitoring</description>
  <maintainer email="haonghuypham6801@gmail.com">hans</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>ar_projects</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ament_index_cpp</depend>

  <build_depend>qtbase5-dev</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
