<?xml version="1.0"?>
<package format="2">
  <name>ar_common</name>
  <version>1.0.0</version>
  <description>A library for tomo common definitions</description>
  <maintainer email="hoanghuypham6801@gmail.com">hans</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>